--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-cayman
-title: My GitHub Pages Site
-description: Welcome to my website
+theme: jekyll-theme-minimal
+title: Valeria Niño Albornoz
+description: Valeria Niño Albornos - Proyectos
