--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: Valeria Niño Albornoz
 description: >
   Bienvenido a mi portafolio de proyectos
 
-logo: 
+logo: /img/IMG_1804.jpeg
 
 github:
   is_user_page: true
