--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: jekyll-theme-minimal
 
 title: Valeria Niño Albornoz
 description: >
-  Bienvenido a mi portafolio de proyectos
+  Bienvenido a mi portafolio de proyectos de análisis de datos
 
 logo:/IMG_1804.jpeg
 
